# ds-inteligent-robot

./: .gitignore
configs/: local2.yaml  nav2_net.yaml  nav2_net2.yaml
maps/: first_map.pgm  first_map.yaml
src/parking_msgs/: CMakeLists.txt  package.xml
src/parking_msgs/srv/: CarClass.srv  CarInfo.srv  CarSize.srv  DetectPerson.srv  Entry.srv  Exit.srv
src/rokey_pjt/: setup.py
src/rokey_pjt/rokey_pjt/: depth_checker.py  depth_checker_mouse_click.py  nav_to_pose.py  navigation_test.py  object_xyz_marker.py  tf_point_transform.py  yolo_depth_checker_compresesd.py  yolo_depth_marker.py  yolo_depth_marker_compressed.py  yolo_depth_tf.py
src/turtle_parking/: package.xml  setup.cfg  setup.py
src/turtle_parking/launch/: web_server.launch.py
src/turtle_parking/turtle_parking/: database_node.py  exit_request_watcher.py  h_grapy.py  license_plate.py  lift_detection.py  lift_navigation.py  navigation_node.py  obb_car_size.py  obb_homograpy.py  person_detect.py  photo.py  robot_decision.py  web_server.py
src/turtle_parking/turtle_parking/keys/: ds-intelligent-robot-default-rtdb-export (1).json  nav_goals.json  parking.json
src/turtle_parking/turtle_parking/models/: homography.yaml
src/turtle_parking/turtle_parking/web/: customer.html  index.html
src/turtle_parking/turtle_parking/web/assets/css/: customer.css  style.css
src/turtle_parking/turtle_parking/web/assets/js/: app.js  customer.js  firebase-config.js
